k8s/apps/ingress-nginx/tailscale-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-jellyfin
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: "jellyfin"
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-navidrome
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: "navidrome"
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-uptime
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: "uptime"
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-sewing
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: "sewing"
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-marketing
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: "marketing"
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerClass: tailscale
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nextcloud
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: "nextcloud"
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
  loadBalancerClass: tailscale
