k8s/apps/ingress-nginx/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-nextcloud
  namespace: ingress-nginx
  annotations:
    tailscale.com/hostname: nextcloud
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: ingress-nginx-controller
      port:
        number: 80
  tls:
    - hosts:
        - nextcloud
